--- a/.gordsbashrc
+++ b/.gordsbashrc
@@ -135,6 +135,7 @@ elif [ "$(expr substr $(uname -s) 1 5)" == "Linux" ]; then
     # Cadence stuff
     export NC
     export CADENCE=/tools/cadenceINCISIV102_USR2
+    export CADENCE=/tools/cadenceINCISIV102_USR2
     export CDS_LIC_FILE=/tools/licenses/lic.cadence
     export ncvlog=${CADENCE}/tools.lnx86/bin/ncvlog
     export XL_LD=${CADENCE}/tools.lnx86/verilog/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/xl_loadpli1
@@ -336,3 +337,7 @@ PATH=/usr/local/jdk1.8.0_91/bin:${PATH}
 # netbeans
 PATH=/usr/local/netbeans-8.1/bin:${PATH}
 
+
+# Spyglass tool (Synopsys Lint thing)
+export SPYGLASS_HOME=/tools/spyglass2015.12.6/Spyglass-5.6.0.6/SPYGLASS_HOME
+PATH=/tools/spyglass2015.12.6/SpyGlass-5.6.0.6/SPYGLASS_HOME/bin:${PATH}
