--- a/.gordsbashrc
+++ b/.gordsbashrc
@@ -19,27 +19,27 @@ if [ "$(uname)" == "CYGWIN_NT-6.1" ]; then
     export ALTERNATE_EDITOR=runemacs EDITOR=emacsclient VISUAL=emacsclient
 
     inbox(){
-	runemacs c:/Users/gwait/Documents/inbox.txt
+	runemacs c:/Users/gwait/Documents/inbox.org
     }
 
     proj(){
-	runemacs c:/Users/gwait/Documents/projects.txt
+	runemacs c:/Users/gwait/Documents/projects.org
     }
 
     next(){
-	runemacs c:/Users/gwait/Documents/NextActions.txt
+	runemacs c:/Users/gwait/Documents/NextActions.org
     }
 
     someday(){
-	runemacs c:/Users/gwait/Documents/SomedayMaybe.txt
+	runemacs c:/Users/gwait/Documents/SomedayMaybe.org
     }
 
     ref(){
-	runemacs c:/Users/gwait/Documents/reference.txt
+	runemacs c:/Users/gwait/Documents/reference.org
     }
 
     ttd(){
-	runemacs c:/Users/gwait/Documents/NextActions.txt
+	runemacs c:/Users/gwait/Documents/NextActions.org
     }
 
     ncs() {
@@ -142,12 +142,22 @@ elif [ "$(expr substr $(uname -s) 1 5)" == "Linux" ]; then
     #    export NC_LD=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
     #    alias nc='export LD_LIBRARY_PATH=${NC_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog'
     #    alias xl='export LD_LIBRARY_PATH=${XL_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/verilog'
-
+    #    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
+    
+#    export CADENCE=/tools/cadenceINCISIV102_USR2
     export CADENCE=/tools/cadenceIUS8.2.021
     export ncvlog=${CADENCE}/tools.lnx86/bin/ncvlog
     export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog
     export CDS_LIC_FILE=/tools/licenses/lic.cadence
-    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX
+# nope:
+#    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX64
+
+# yeup:
+#    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX
+
+    # nope. Needs command line options too?
+    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX/boot
+
     export PATH=$CADENCE/tools.lnx86/bin:${PATH}
     export PATH=$DEBUSSYDIR/bin:${PATH}
 
@@ -310,11 +320,8 @@ setsrcdir(){
 
 save_my_variables() {
     echo "export WORKDIR=$WORKDIR" > ~/.persistent_variables
-    echo "export FPGADIR=$FPGADIR" > ~/.persistent_variables
+    echo "export FPGADIR=$FPGADIR" >> ~/.persistent_variables
     echo "export SRCDIR=$SRCDIR" >> ~/.persistent_variables
-    echo "export V4DIR=$V4DIR" >> ~/.persistent_variables
-    echo "export V5DIR=$V5DIR" >> ~/.persistent_variables
-    echo "export S4DIR=$S4DIR" >> ~/.persistent_variables
 }
 
 export LS_OPTIONS="-F"
@@ -365,3 +372,7 @@ PATH=/usr/local/netbeans-8.1/bin:${PATH}
 export SPYGLASS_HOME=/tools/spyglass2015.12.6/Spyglass-5.6.0.6/SPYGLASS_HOME
 PATH=/tools/spyglass2015.12.6/SpyGlass-5.6.0.6/SPYGLASS_HOME/bin:${PATH}
 export ATRENTA_LICENSE_FILE=27020@icclic5:27020@icclic6
+
+# graphing git:
+alias gg='git log --oneline --abbrev-commit --all --graph --decorate --color'
+
