--- a/.gordsbashrc
+++ b/.gordsbashrc
@@ -126,130 +126,130 @@ elif [ "$(expr substr $(uname -s) 1 5)" == "Linux" ]; then
 
     asic_tools() {
         
-    # Debussy (Novas) stufff 
-    export LM_LICENSE_FILE=/tools/licenses/lic.cadence:/tools/licenses/lic.debussy:27020@icclic5:27020@icclic6
-    export NOVAS_LICENSE_FILE=/tools/licenses/lic.debussy
-    
-    #    export DEBUSSYDIR=/tools/debussy200807
-    export DEBUSSYDIR=/tools/debussy_201101
+        # Debussy (Novas) stufff 
+        export LM_LICENSE_FILE=/tools/licenses/lic.cadence:/tools/licenses/lic.debussy:27020@icclic5:27020@icclic6
+        export NOVAS_LICENSE_FILE=/tools/licenses/lic.debussy
+        
+        #    export DEBUSSYDIR=/tools/debussy200807
+        export DEBUSSYDIR=/tools/debussy_201101
 
-    # track glitches in NC Verilog
-    export NOVAS_FSDB_ENV_MAX_GLITCH_NUM=0
+        # track glitches in NC Verilog
+        export NOVAS_FSDB_ENV_MAX_GLITCH_NUM=0
 
-    # Cadence stuff
-    export NC
-    #    export CADENCE=/tools/cadenceINCISIV102_USR2
-    #    export XL_LD=${CADENCE}/tools.lnx86/verilog/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/xl_loadpli1
-    #    export NC_LD=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
-    #    alias nc='export LD_LIBRARY_PATH=${NC_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog'
-    #    alias xl='export LD_LIBRARY_PATH=${XL_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/verilog'
-    #    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
-    
-#    export CADENCE=/tools/cadenceINCISIV102_USR2
-    export CADENCE=/tools/cadenceIUS8.2.021
-    export ncvlog=${CADENCE}/tools.lnx86/bin/ncvlog
-    export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog
-    export CDS_LIC_FILE=/tools/licenses/lic.cadence
-# nope:
-#    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX64
+        # Cadence stuff
+        export NC
+        #    export CADENCE=/tools/cadenceINCISIV102_USR2
+        #    export XL_LD=${CADENCE}/tools.lnx86/verilog/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/xl_loadpli1
+        #    export NC_LD=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
+        #    alias nc='export LD_LIBRARY_PATH=${NC_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog'
+        #    alias xl='export LD_LIBRARY_PATH=${XL_LD}; export VERILOG=${CADENCE}/tools.lnx86/bin/verilog'
+        #    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/nc_xl/LINUX/nc_loadpli1
+        
+        #    export CADENCE=/tools/cadenceINCISIV102_USR2
+        export CADENCE=/tools/cadenceIUS8.2.021
+        export ncvlog=${CADENCE}/tools.lnx86/bin/ncvlog
+        export VERILOG=${CADENCE}/tools.lnx86/bin/ncverilog
+        export CDS_LIC_FILE=/tools/licenses/lic.cadence
+        # nope:
+        #    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX64
 
-# yeup:
-#    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX
+        # yeup:
+        #    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX
 
-    # nope. Needs command line options too?
-    export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX/boot
+        # nope. Needs command line options too?
+        export LD_LIBRARY_PATH=${CADENCE}/tools.lnx86/inca/pli:${CADENCE}/tools.lnx86/lib:${LD_LIBRARY_PATH}:${DEBUSSYDIR}/share/PLI/IUS/LINUX/boot
 
-    export PATH=$CADENCE/tools.lnx86/bin:${PATH}
-    export PATH=$DEBUSSYDIR/bin:${PATH}
+        export PATH=$CADENCE/tools.lnx86/bin:${PATH}
+        export PATH=$DEBUSSYDIR/bin:${PATH}
 
-    # older tools: 13.xx
-    # Altera:
-    #export QUARTUS_ROOTDIR=/opt/Altera/QuartusII/quartus
-    #source /opt/Altera/QuartusII/quartus/adm/qenv.sh
-    # to build encrypted file on spanish
-    #export ALTERAOCLSDKROOT="/opt/Altera/QuartusII/hld"
-    #PATH="/opt/Altera/QuartusII/quartus/bin:$PATH"
-    #export QSYS_ROOTDIR="/opt/Altera/QuartusII/quartus/sopc_builder/bin"
+        # older tools: 13.xx
+        # Altera:
+        #export QUARTUS_ROOTDIR=/opt/Altera/QuartusII/quartus
+        #source /opt/Altera/QuartusII/quartus/adm/qenv.sh
+        # to build encrypted file on spanish
+        #export ALTERAOCLSDKROOT="/opt/Altera/QuartusII/hld"
+        #PATH="/opt/Altera/QuartusII/quartus/bin:$PATH"
+        #export QSYS_ROOTDIR="/opt/Altera/QuartusII/quartus/sopc_builder/bin"
 
-    # export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
-    # source $QUARTUS_ROOTDIR/adm/qenv.sh
-    # export QSYS_ROOTDIR="/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin"
-    # export ALTERAOCLSDKROOT="/tools/altera/altera_lite/15.1/hld"
-    # bug fix for Quartus on Ubuntu? Nope.
-    # export CURLOPT_NOSIGNAL=1
+        # export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
+        # source $QUARTUS_ROOTDIR/adm/qenv.sh
+        # export QSYS_ROOTDIR="/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin"
+        # export ALTERAOCLSDKROOT="/tools/altera/altera_lite/15.1/hld"
+        # bug fix for Quartus on Ubuntu? Nope.
+        # export CURLOPT_NOSIGNAL=1
 
-    # temporarily stop this so I can install stuff.
-    #    source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
-    #    source $QUARTUS_ROOTDIR/adm/qenv.sh
+        # temporarily stop this so I can install stuff.
+        #    source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
+        #    source $QUARTUS_ROOTDIR/adm/qenv.sh
 
-    # export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
-    # export QSYS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin
-    # source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
+        # export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
+        # export QSYS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin
+        # source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
 
-    #    export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
-    #    export QSYS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin
-    #    export ALTERAOCLSDKROOT="/tools/altera/altera_lite/15.1/hld"
-    #    source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
-    export ALTERA_DIR=/tools/altera/altera_lite/16.0
-    export QUARTUS_ROOTDIR=$ALTERA_DIR/quartus
-    export QSYS_ROOTDIR=$ALTERA_DIR/quartus/sopc_builder/bin
-    export ALTERAOCLSDKROOT="$ALTERA_DIR/hld"
-    source $ALTERA_DIR/quartus/adm/qenv.sh
+        #    export QUARTUS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus
+        #    export QSYS_ROOTDIR=/tools/altera/altera_lite/15.1/quartus/sopc_builder/bin
+        #    export ALTERAOCLSDKROOT="/tools/altera/altera_lite/15.1/hld"
+        #    source /tools/altera/altera_lite/15.1/quartus/adm/qenv.sh
+        export ALTERA_DIR=/tools/altera/altera_lite/16.0
+        export QUARTUS_ROOTDIR=$ALTERA_DIR/quartus
+        export QSYS_ROOTDIR=$ALTERA_DIR/quartus/sopc_builder/bin
+        export ALTERAOCLSDKROOT="$ALTERA_DIR/hld"
+        source $ALTERA_DIR/quartus/adm/qenv.sh
 
-    # add Altera edition Modelsim to the path:
-    PATH=$ALTERA_DIR/modelsim_ase/bin:${PATH}
+        # add Altera edition Modelsim to the path:
+        PATH=$ALTERA_DIR/modelsim_ase/bin:${PATH}
 
-    # bug fix for Quartus on Ubuntu? Nope.
-    export CURLOPT_NOSIGNAL=1
+        # bug fix for Quartus on Ubuntu? Nope.
+        export CURLOPT_NOSIGNAL=1
 
-    export OFFICE_SEL=VDC
+        export OFFICE_SEL=VDC
 
-# New Xilinx tools on Win7 Epson:
+        # New Xilinx tools on Win7 Epson:
 
-# 
-# if [ -d "${HOME}/bin" ] ; then
-#   PATH=${HOME}/bin:${PATH}
-# fi
-# VIVADO_LOC=/Xilinx/Vivado/2013.3
-# VIVADO_HLS_LOC=/Xilinx/Vivado_HLS/2013.3
-# PATH=$VIVADO_LOC/bin:$VIVADO_LOC/.xinstall/bin/nt64:$VIVADO_LOC/ids_lite/ISElib2/nt64:$VIVADO_LOC/ids_lite/EDK/gnuwin/bin:$VIVADO_HLS_LOC/bin:${PATH}
-# XIL_PAR_DESIGN_CHECK_VERBOSE=3
+        # 
+        # if [ -d "${HOME}/bin" ] ; then
+        #   PATH=${HOME}/bin:${PATH}
+        # fi
+        # VIVADO_LOC=/Xilinx/Vivado/2013.3
+        # VIVADO_HLS_LOC=/Xilinx/Vivado_HLS/2013.3
+        # PATH=$VIVADO_LOC/bin:$VIVADO_LOC/.xinstall/bin/nt64:$VIVADO_LOC/ids_lite/ISElib2/nt64:$VIVADO_LOC/ids_lite/EDK/gnuwin/bin:$VIVADO_HLS_LOC/bin:${PATH}
+        # XIL_PAR_DESIGN_CHECK_VERBOSE=3
 
-# working PCIe master: (use this normally)
-# if [ -e /opt/Xilinx/Vivado/2013.3/settings64.sh ] ; then
-#    source /opt/Xilinx/Vivado/2013.3/settings64.sh
-# fi
+        # working PCIe master: (use this normally)
+        # if [ -e /opt/Xilinx/Vivado/2013.3/settings64.sh ] ; then
+        #    source /opt/Xilinx/Vivado/2013.3/settings64.sh
+        # fi
 
-# new tools. lets see..
-# if [ -e /opt/Xilinx/Vivado/2014.4/settings64.sh ] ; then
-#    source /opt/Xilinx/Vivado/2014.4/settings64.sh
-# fi
+        # new tools. lets see..
+        # if [ -e /opt/Xilinx/Vivado/2014.4/settings64.sh ] ; then
+        #    source /opt/Xilinx/Vivado/2014.4/settings64.sh
+        # fi
 
-# if [ -e /opt/Xilinx/14.7/ISE_DS/settings64.sh ] ; then
-#     source /opt/Xilinx/14.7/ISE_DS/settings64.sh
-# fi
+        # if [ -e /opt/Xilinx/14.7/ISE_DS/settings64.sh ] ; then
+        #     source /opt/Xilinx/14.7/ISE_DS/settings64.sh
+        # fi
 
-# x11 remote noise about dbus errors. Shut up please:
-export NO_AT_BRIDGE=1
-# Spyglass tool (Synopsys Lint thing)
-export SPYGLASS_HOME=/tools/spyglass2015.12.6/Spyglass-5.6.0.6/SPYGLASS_HOME
-PATH=/tools/spyglass2015.12.6/SpyGlass-5.6.0.6/SPYGLASS_HOME/bin:${PATH}
-export ATRENTA_LICENSE_FILE=27020@icclic5:27020@icclic6
-
+        # x11 remote noise about dbus errors. Shut up please:
+        export NO_AT_BRIDGE=1
+        # Spyglass tool (Synopsys Lint thing)
+        export SPYGLASS_HOME=/tools/spyglass2015.12.6/Spyglass-5.6.0.6/SPYGLASS_HOME
+        PATH=/tools/spyglass2015.12.6/SpyGlass-5.6.0.6/SPYGLASS_HOME/bin:${PATH}
+        export ATRENTA_LICENSE_FILE=27020@icclic5:27020@icclic6
 
     }
 
     altera13() {
-    # older tools: 13.xx
-    # Altera:
-    export QUARTUS_ROOTDIR=/opt/Altera/QuartusII/quartus
-    source /opt/Altera/QuartusII/quartus/adm/qenv.sh
-    # to build encrypted file on spanish (you mean union?)
-    export ALTERAOCLSDKROOT="/opt/Altera/QuartusII/hld"
-    PATH="/opt/Altera/QuartusII/quartus/bin:$PATH"
-    export QSYS_ROOTDIR="/opt/Altera/QuartusII/quartus/sopc_builder/bin"
+        # older tools: 13.xx
+        # Altera:
+        export ALTERA_DIR=/opt/Altera/QuartusII
+        export QUARTUS_ROOTDIR=$ALTERA_DIR/quartus
+        export QSYS_ROOTDIR=$ALTERA_DIR/quartus/sopc_builder/bin
+        export ALTERAOCLSDKROOT=$ALTERA_DIR/hld
+#        source $ALTERA_DIR/quartus/adm/qenv.sh
+        # to build encrypted file on spanish (you mean union?)
+        PATH=/opt/Altera/QuartusII/quartus/bin:$PATH
     }
-    
+  
 
     # Local xwindow stuff
     # alias xme="export DISPLAY=172.22.196.148:0.0"
